[package]
name = "postman"
version = "0.1.0"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "postman will distribute mails for you"
license = "Apache-2.0"

[[bin]]
name = "postman"

[dependencies]
anyhow = "1.0.34"
bincode = "1.3.1"
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.6"
tokio = { version = "0.3.4", features = ["full"] }
postman-pop3 = { path = "components/pop3" }

[workspace]
members = [
    "components/pop3"
]
