[package]
name = "postman-pop3"
version = "0.1.0"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.34"
env_logger = "0.8.2"
log = "0.4.11"
tokio = { version = "0.3.4", features = ["full"] }
