[package]
name = "postman-pop3"
version = "0.1.1-alpha.1"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "postman-pop3 is the pop3 proto support for postman"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.34"
env_logger = "0.8.2"
log = "0.4.11"
tokio = { version = "0.3.4", features = ["full"] }
